--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-hello my name is levi 
-I love college football
-and my dog
+Welcome!
+My name is Levi Arnett I love college Football, my Girlfriend and my dog
+This is where I upload my ATK 301: Intro to Web Design homework.
