Fixed a few formatting errors

--- a/assignment1.html
+++ b/assignment1.html
@@ -9,8 +9,7 @@
 <body>
   <h1><b>Arts Technology Program (ATK)</b></h1>
 
-  <p>
-    <<b>110 Center for Visual Arts</b><br>
+  <p><b>110 Center for Visual Arts</b><br>
       <b>Phone:</b> (309) 438-3921<br>
       <b>Director:</b> Aaron Paolucci<br>
       <b>Degrees Offered:</b> B.A., B.S.
@@ -21,7 +20,6 @@
   <p>The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree provides undergraduate
     training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web
     design.</p>
-
 
   <h2>Admission and Retention Requirements:</h2>
 
@@ -52,7 +50,6 @@
 
   <p>6 hours in addition to the Art course completed for the Fine Arts Core from the following courses: ART 103, 104, or 109 and 12 hours from ART 226, 232, 233, 235, 236, 252, 261, 262, 284, 357, or 363; or</p>
 
-
   <h5>Music</h5>
 
   <p>6 hours in addition to the Music course completed for the Fine Arts Core from the follwing courses: MUS 118 or 119, 121, 126, or from Applied Music study (MUS 131-138 or 231-238): and 6 hours from the following: MUS 101 and 107, or 102 and 108;
@@ -61,7 +58,6 @@
   <h5>Theatre</h5>
 
   <p>18 hours from the following: DAN 119; THE 101, 102, 110, 130, 160, 258, 260, 261 or 344.</p>
-
 
   <h4>Additional Arts Technology Study (15 hours)</h4>
 
@@ -75,10 +71,9 @@
     <li>Item 4</li>
   </ul>
 
-  <h4>.Capstone Experience in Arts Technology (3 hours)</h4>
+  <h4>Capstone Experience in Arts Technology (3 hours)</h4>
 
   <p>Internship in Arts Technology (ATK 398 or comparable culminating experience in multimedia design as approved by the program advisor e.g. ATK 260).</p>
-
 
   <h1>Arts Technology Courses (ATK)</h1>
 
