Changed title, fixed formatting with beautify.

--- a/assignment1.html
+++ b/assignment1.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Arts Technology Program (ATK)</title>
+  <title>Assignment 1</title>
 </head>
 
 <body>
   <h1><b>Arts Technology Program (ATK)</b></h1>
 
   <p><b>110 Center for Visual Arts</b><br>
-      <b>Phone:</b> (309) 438-3921<br>
-      <b>Director:</b> Aaron Paolucci<br>
-      <b>Degrees Offered:</b> B.A., B.S.
+    <b>Phone:</b> (309) 438-3921<br>
+    <b>Director:</b> Aaron Paolucci<br>
+    <b>Degrees Offered:</b> B.A., B.S.
   </p>
 
   <h2>MAJOR IN ARTS TECHNOLOGY</h2>
