--- a/Exercise2/page2.html
+++ b/Exercise2/page2.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Teeth</title>
-    <meta content="">
+    <meta charset="utf-8">
+    <title>Exercise 2</title>
     <style></style>
   </head>
 <body><h1></h1>
@@ -14,3 +15,4 @@
 <p><img src="images/Teeth.jpg" alt= "teeth"></p>
 <p> This is a picture about teeth.  There is a guy and some teeth. There is also a toothbrush and it says "Keep Your Teeth Clean"
 </body>
+</html>
