--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Exercise 2</title>
-    <meta content="">
     <style></style>
   </head>
 <body><h1>Levi Arnett " I am the master of my fate,
