--- a/Exercise2/page1.html
+++ b/Exercise2/page1.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Eyes</title>
-    <meta content="">
+    <meta charset="utf-8">
+    <title>Exercise 2</title>
     <style></style>
   </head>
 <body><h1></h1>
@@ -14,3 +15,4 @@
 <p>Everyone knows googles are a scam started by the Optomitrist industry so they can bank on hard working blue collar people smdh.</p>
 <p><img src="images/eyes.jpeg" alt= "eyes"></p>
 </body>
+</html>
