--- a/Exercise2/page3.html
+++ b/Exercise2/page3.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Poster</title>
-    <meta content="">
+    <meta charset="utf-8">
+    <title>Exercise 2</title>
     <style></style>
   </head>
 <body><h1></h1>
@@ -14,4 +15,4 @@
 <p><img src="images/Posters.png" alt= "posters"></p>
 <p>This is a poster showing information for a federal art project</p>
 </body><!DOCTYPE html>
-</html lang="">
+</html>
