--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -14,7 +14,7 @@
         <li><a href="index.html">Zoo</a></li>
       <li><a href="page1.html">Eyes</a></li>
     <li><a href="page2.html">Teeth</a></li>
-    <li><a href="Page3.html">Poster</a></li>
+    <li><a href="page3.html">Poster</a></li>
     </ul>
 <p>This is an image of what appears to be a panther with large bold print of "BROOKFIELD ZOO." It seems to be a very neat image.</p>
 <p><img src="images/Zoo.gif" alt= "zoo"></p>
