--- a/Exercise2/page1.html
+++ b/Exercise2/page1.html
@@ -10,7 +10,7 @@
     <li><a href="index.html">Zoo</a></li>
   <li><a href="page1.html">Eyes</a></li>
 <li><a href="page2.html">Teeth</a></li>
-<li><a href="Page3.html">Poster</a></li>
+<li><a href="page3.html">Poster</a></li>
 </ul>
 <p>Everyone knows googles are a scam started by the Optomitrist industry so they can bank on hard working blue collar people smdh.</p>
 <p><img src="images/eyes.jpeg" alt= "eyes"></p>
