--- a/Exercise2/page3.html
+++ b/Exercise2/page3.html
@@ -10,7 +10,7 @@
     <li><a href="index.html">Zoo</a></li>
   <li><a href="page1.html">Eyes</a></li>
 <li><a href="page2.html">Teeth</a></li>
-<li><a href="Page3.html">Poster</a></li>
+<li><a href="page3.html">Poster</a></li>
 </ul>
 <p><img src="images/Posters.png" alt= "posters"></p>
 <p>This is a poster showing information for a federal art project</p>
