--- a/Exercise2/page1.html
+++ b/Exercise2/page1.html
@@ -13,6 +13,6 @@
 <li><a href="page3.html">Poster</a></li>
 </ul>
 <p>Everyone knows googles are a scam started by the Optomitrist industry so they can bank on hard working blue collar people smdh.</p>
-<p><img src="images/eyes.jpeg" alt= "eyes"></p>
+<p><img src="images/eyes.JPEG" alt= "eyes"></p>
 </body>
 </html>
