just some fixes

--- a/exercise3.html
+++ b/exercise3.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>office Ipsum </title>
   </head>
-  <body>  <h1>Office Ipsum
+  <body>
+     <h1>Office Ipsum</h1>
     <ul>
       <li><a href="exercise3">Home<a/></li>
       <li><a href="officeipsum.com" target="blank">officeispum.com</a></li>
       <li><a href="illinoisstate.edu">Home
     </ul>
-  </h1>
 
     <h2>About Us</h2>
 
