Changes keep happening

--- a/exercise3.html
+++ b/exercise3.html
@@ -7,17 +7,17 @@
   <body>
      <h1>Office Ipsum</h1>
     <ul>
-      <li><a href="exercise3">Home<a/></li>
+      <li><a href="exercise3">Home</li>
       <li><a href="officeipsum.com" target="blank">officeispum.com</a></li>
       <li><a href="illinoisstate.edu">Home
     </ul>
 
     <h2>About Us</h2>
 
-    <p>That sandwich needs to be more playful. I have printed it out, but the animated gif is not moving. Can you please send me the design specs again? There is too much white space. Remember, everything is the same or better. Can you make the font bigger? That's great, but we need to add this 2000 line essay. Try a more powerful color. Try a more powerful colour, but use a <a href="en.wikipedia.org/wiki/K-pop"K-pop</a> logo that's not a K-pop logo! Ugh. Can you turn it around in photoshop so we can see more of the front? Is this the best we can do? That's going to be a chunk of change! We don't need a contract, do we? Could you move it a tad to the left? I love it, but can you invert all the colors?</p>
+    <p>That sandwich needs to be more playful. I have printed it out, but the animated gif is not moving. Can you please send me the design specs again? There is too much white space. Remember, everything is the same or better. Can you make the font bigger? That's great, but we need to add this 2000 line essay. Try a more powerful color. Try a more powerful colour, but use a <a href="en.wikipedia.org/wiki/K-pop">K-pop</a> logo that's not a K-pop logo! Ugh. Can you turn it around in photoshop so we can see more of the front? Is this the best we can do? That's going to be a chunk of change! We don't need a contract, do we? Could you move it a tad to the left? I love it, but can you invert all the colors?</p>
 
     <h3>What We Do<br></h3>
-      Iit looks a bit empty, try to make everything bigger. Ugh the hair is just too polarizing. Can you rework to make the pizza look more delicious? Make it look like Apple. That's not what i saw in my head at all. Can you make it look more designed? I know you've made thirty iterations but can we go back to the first one? That was the best version. Thanks for taking the time to make the website, but I already made it in Wix. Just Photoshop out the dog, add a baby, and make the curtains blue. Can you lower the price for the website? Make it high quality and please use html. Can you make the font a bit bigger and change it to times new roman? Jazz it up a little bit</p>
+      <p>.It looks a bit empty, try to make everything bigger. Ugh the hair is just too polarizing. Can you rework to make the pizza look more delicious? Make it look like Apple. That's not what i saw in my head at all. Can you make it look more designed? I know you've made thirty iterations but can we go back to the first one? That was the best version. Thanks for taking the time to make the website, but I already made it in Wix. Just Photoshop out the dog, add a baby, and make the curtains blue. Can you lower the price for the website? Make it high quality and please use html. Can you make the font a bit bigger and change it to times new roman? Jazz it up a little bit</p>
 
       <h4>Our People</h4>
       <ul>
