--- a/exercise3.html
+++ b/exercise3.html
@@ -7,9 +7,9 @@
   <body>
      <h1>Office Ipsum</h1>
     <ul>
-      <li><a href="exercise3">Home</a></li>
-      <li><a href="officeipsum.com" target="blank">officeispum.com</a></li>
-      <li><a href="illinoisstate.edu">Illinois State</a></li>
+      <li><a> href="exercise3">Home</a></li>
+      <li><a> href="officeipsum.com" target="blank">officeispum.com</a></li>
+      <li><a> href="illinoisstate.edu">Illinois State</a></li>
     </ul>
 
     <h2>About Us</h2>
