--- a/exercise3.html
+++ b/exercise3.html
@@ -9,7 +9,7 @@
     <ul>
       <li><a href="exercise3">Home</li>
       <li><a href="officeipsum.com" target="blank">officeispum.com</li>
-      <li><a href="illinoisstate.edu">Illinois State</a></li>
+      <li><a href="https://www.illinoisstate.edu">Illinois State</a></li>
     </ul>
 
     <h2>About Us</h2>
