--- a/exercise3.html
+++ b/exercise3.html
@@ -8,7 +8,7 @@
      <h1>Office Ipsum</h1>
     <ul>
       <li><a href="exercise3">Home</li>
-      <li><a href="https://www.officeipsum.com" target="blank">officeispum.com</li>
+      <li><a href="https://www.officeipsum.com" target="blank">officeispum.com</a></li>
       <li><a href="https://www.illinoisstate.edu">Illinois State</a></li>
     </ul>
 
