--- a/assignment2.html
+++ b/assignment2.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Assignment 2</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
