--- a/assignment3.html
+++ b/assignment3.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Assignment 2</title>
+  <title>Assignment 3</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -19,16 +19,17 @@
   </header>
   <div class="">
     <h2>MAJOR IN ARTS TECHNOLOGY</h2>
-    <p>The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree provides
-      undergraduate
-      training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web
-      design.</p>
+    <p class="specialp">The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree provides
+        undergraduate
+        training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web
+        design.</p>
+
   </div>
   <nav>
     <ul>
-      <li><a href="assignment2.html">Home</li>
-      <li><a href="page2.html">Requirements</li>
-      <li><a href="page3.html">Classes</a></li>
+      <li><a href="assignment2.html">Home</li></a>
+      <li><a href="page2.html">Requirements</li></a>
+      <li><a href="page3.html">Classes</a></li></a>
     </ul>
   </nav>
 
