--- a/assignment3.html
+++ b/assignment3.html
@@ -6,10 +6,9 @@
   <title>Assignment 3</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-  <p><img src="images/sawitontv.png" alt="Artistic Representation of Propaganda on TV" style="width:600px;height:370px;"></p>
   <header>
+      <p><img src="images/sawitontv.png" alt="Artistic Representation of Propaganda on TV" style="width:600px;height:370px;"></p>
     <h1><b>Arts Technology Program (ATK)</h1>
     <p><b>110 Center for Visual Arts</b><br>
       <b>Phone:</b> (309) 438-3921<br>
@@ -19,11 +18,11 @@
   </header>
   <div class="">
     <h2>MAJOR IN ARTS TECHNOLOGY</h2>
-    <p class="specialp">The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree provides
-        undergraduate
-        training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web
-        design.</p>
-
+    <p class="specialp">The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree
+      provides
+      undergraduate
+      training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web
+      design.</p>
   </div>
   <nav>
     <ul>
