--- a/page2.html
+++ b/page2.html
@@ -4,59 +4,64 @@
 <head>
   <meta charset="utf-8">
   <title>Assignment 2</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <p><img src="images/cosmicsurfer.jpeg" alt="Will humans be the kooks of the Universe?" style="width:600px;height:370px;"></p>
+<header>
   <h1>Arts Technology Program (ATK)</h1>
+</header>
+<div class="">
   <h2>MAJOR IN ARTS TECHNOLOGY</h2>
 
-  <p>The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree provides undergraduate
-    training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web
-    design.</p>
+    <p>The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree provides undergraduate
+      training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web
+      design.</p>
 
-  <h2>Admission and Retention Requirements:</h2>
+    <h2>Admission and Retention Requirements:</h2>
 
-  <p>All students must undergo a portfolio review and/or an interview with the Arts Technology Admissions Committee before being admitted into the program. The Committee will evaluate admission requests from new beginning freshman, new transfer
-    students, and internal transfers. The Arts Technology program reserves the right to maintain a balanced enrollment and the number of students wishing to enter the Arts Technology program may be restricted.</p>
+    <p>All students must undergo a portfolio review and/or an interview with the Arts Technology Admissions Committee before being admitted into the program. The Committee will evaluate admission requests from new beginning freshman, new transfer
+      students, and internal transfers. The Arts Technology program reserves the right to maintain a balanced enrollment and the number of students wishing to enter the Arts Technology program may be restricted.</p>
 
-  <p>Students will be allowed to continue in the Arts Technology program who have met and continue to maintain a cumulative GPA of 2.50 and have demonstrated competency through an intermediate portfolio review.</p>
+    <p>Students will be allowed to continue in the Arts Technology program who have met and continue to maintain a cumulative GPA of 2.50 and have demonstrated competency through an intermediate portfolio review.</p>
 
-  <h3>Academic Requirements:</h3>
+    <h3>Academic Requirements:</h3>
 
-  <p><i>The 55 hours required for the degree are programmed as follows:</i></p>
+    <p><i>The 55 hours required for the degree are programmed as follows:</i></p>
 
-  <h4>Fine Arts Core (11 hours)</h4>
+    <h4>Fine Arts Core (11 hours)</h4>
 
-  <p>This group of courses provides the student with a basic experience in reading and performing music, visual arts experience in drawing and design, and interdisciplinary fine arts history study: 3 hours from the following: ART 103, 104 or 109; and
-    2 hours from the following: MUS 118 or 119, 121.10, or 126; and 6 hours (in two different Schools) from the following: ART 155, 156, MUS 152, THE 170 or 171.</p>
+    <p>This group of courses provides the student with a basic experience in reading and performing music, visual arts experience in drawing and design, and interdisciplinary fine arts history study: 3 hours from the following: ART 103, 104 or 109; and
+      2 hours from the following: MUS 118 or 119, 121.10, or 126; and 6 hours (in two different Schools) from the following: ART 155, 156, MUS 152, THE 170 or 171.</p>
 
-  <h4>Arts Technology Core (8 hours)</h4>
+    <h4>Arts Technology Core (8 hours)</h4>
 
-  <p>This group of courses provides the student with a foundation of study in digital media and multimedia design: ATK 201, 301; and 302.</p>
+    <p>This group of courses provides the student with a foundation of study in digital media and multimedia design: ATK 201, 301; and 302.</p>
 
-  <h4>Additional Fine Arts Study (18 hours)</h4>
+    <h4>Additional Fine Arts Study (18 hours)</h4>
 
-  <p>This group of courses provides the student with fine arts training in the historical and theoretical foundations, skills, and performance and production experiences of the arts. Choose one area of Fine Arts emphasis from the schools of Art,
-    Music, or Theatre and Dance.</p>
+    <p>This group of courses provides the student with fine arts training in the historical and theoretical foundations, skills, and performance and production experiences of the arts. Choose one area of Fine Arts emphasis from the schools of Art,
+      Music, or Theatre and Dance.</p>
 
-  <h5>Art</h5>
+    <h5>Art</h5>
 
-  <p>6 hours in addition to the Art course completed for the Fine Arts Core from the following courses: ART 103, 104, or 109 and 12 hours from ART 226, 232, 233, 235, 236, 252, 261, 262, 284, 357, or 363; or</p>
+    <p>6 hours in addition to the Art course completed for the Fine Arts Core from the following courses: ART 103, 104, or 109 and 12 hours from ART 226, 232, 233, 235, 236, 252, 261, 262, 284, 357, or 363; or</p>
 
-  <h5>Music</h5>
+    <h5>Music</h5>
 
-  <p>6 hours in addition to the Music course completed for the Fine Arts Core from the follwing courses: MUS 118 or 119, 121, 126, or from Applied Music study (MUS 131-138 or 231-238): and 6 hours from the following: MUS 101 and 107, or 102 and 108;
-    and 6 hours from the following: MUS 167, 175, 205, 207, 265, 360, or up to two credit hours of a music ensemble (MUS 139 or 239). Auditions may be required by the School of Music for some of these courses; or</p>
+    <p>6 hours in addition to the Music course completed for the Fine Arts Core from the follwing courses: MUS 118 or 119, 121, 126, or from Applied Music study (MUS 131-138 or 231-238): and 6 hours from the following: MUS 101 and 107, or 102 and 108;
+      and 6 hours from the following: MUS 167, 175, 205, 207, 265, 360, or up to two credit hours of a music ensemble (MUS 139 or 239). Auditions may be required by the School of Music for some of these courses; or</p>
 
-  <h5>Theatre</h5>
+    <h5>Theatre</h5>
 
-  <p>18 hours from the following: DAN 119; THE 101, 102, 110, 130, 160, 258, 260, 261 or 344.</p>
+    <p>18 hours from the following: DAN 119; THE 101, 102, 110, 130, 160, 258, 260, 261 or 344.</p>
 
-  <h4>Additional Arts Technology Study (15 hours)</h4>
+    <h4>Additional Arts Technology Study (15 hours)</h4>
 
-  <p>Select from the following courses after completion of the Fine Arts Core, the Arts Technology Core, and the Arts Technology intermediate portfolio review.</p>
+    <p>Select from the following courses after completion of the Fine Arts Core, the Arts Technology Core, and the Arts Technology intermediate portfolio review.</p>
 
+</div>
   <ul>
     <li>3 hours from the following: ATK 240, 300, 340, 345, or 380.</li>
     <li>3 hours from the following: ATK 300, ART 371, THE 360 with graphic topics, or ATK 380.</li>
@@ -68,11 +73,13 @@
   <h4>Capstone Experience in Arts Technology (3 hours)</h4>
 
   <p>Internship in Arts Technology (ATK 398 or comparable culminating experience in multimedia design as approved by the program advisor e.g. ATK 260).</p>
+<nav>
   <ul>
     <li><a href="assignment2.html">Home</li>
     <li><a href="page2.html">Requirements</li>
     <li><a href="page3.html">Classes</a></li>
   </ul>
+</nav>
 </body>
 
 </html>
