--- a/exercise3.html
+++ b/exercise3.html
@@ -31,3 +31,4 @@
       <h5><b>But Wait, There's More</b></h5>
       <p>Can't you just take a picture from the internet? And i cant pay you. You might wanna give it another shot. What you've given us is too texty. The flier should feel like a warm handshake. Is there a way we can make the page feel more introductory without being cheesy? I was wondering if my cat could be placed over the logo in the flyer? Can you make the logo bigger? Yes bigger. Bigger still. The logo is too big. I know somebody who can do this for a reasonable cost. I got your invoice... it seems really high, why did you charge so much? Can you make it faster? Are you busy this weekend? I have a new project with a tight deadline. I want you to take it to the next level. You can get my logo from facebook. Can we have another option doing some work for us "pro bono".</p>
 </body>
+</html>
