changes to fix links

--- a/exercise3.html
+++ b/exercise3.html
@@ -7,9 +7,9 @@
   <body>
      <h1>Office Ipsum</h1>
     <ul>
-      <li><a href="exercise3"</a>Home</li>
-      <li><a href="https://www.officeipsum.com" target="blank">officeispum.com</a></li>
-      <li><a href="https://www.illinoisstate.edu">Illinois State</a></li>
+      <li><a href="exercise3">Home</li>
+      <li><a href="https://www.officeipsum.com" target="blank">officeispum.com</li>
+      <li><a href="https://www.illinoisstate.edu">Illinois State</li>
     </ul>
 
     <h2>About Us</h2>
