--- a/exercise3.html
+++ b/exercise3.html
@@ -7,7 +7,7 @@
   <body>
      <h1>Office Ipsum</h1>
     <ul>
-      <li><a href="exercise3.html">Home<</a></li>
+      <li><a href="exercise3.html">Home</a></li>
       <li><a href="https://www.officeipsum.com" target="blank">officeispum.com</a></li>
       <li><a href="https://www.illinoisstate.edu">Illinois State</a></li>
     </ul>
