--- a/exercise3.html
+++ b/exercise3.html
@@ -26,9 +26,9 @@
         <li>Gilman Chatsworth</li>
       </ul>
 
-       <p>Make the purple more well, <i>purple-er? It looks so empty! Add some more hearts and can you add a bit of pastel pink and baby blue because the purple alone looks too fancy. Okay can you put a cute quote on the right side of the site? Oh no it looks messed up! Please give us a complimentary logo along with the website. Can you make it look like this clipart i found? You are lucky to even be doing this for us.
+       <p>Make the purple more well, <i>purple-er?</i> It looks so empty! Add some more hearts and can you add a bit of pastel pink and baby blue because the purple alone looks too fancy. Okay can you put a cute quote on the right side of the site? Oh no it looks messed up! Please give us a complimentary logo along with the website. Can you make it look like this clipart i found? You are lucky to even be doing this for us.
 
-      <h5><b>But Wait, There's More</b></h5>
+      <h5>But Wait, There's More</b></h5>
       <p>Can't you just take a picture from the internet? And i cant pay you. You might wanna give it another shot. What you've given us is too texty. The flier should feel like a warm handshake. Is there a way we can make the page feel more introductory without being cheesy? I was wondering if my cat could be placed over the logo in the flyer? Can you make the logo bigger? Yes bigger. Bigger still. The logo is too big. I know somebody who can do this for a reasonable cost. I got your invoice... it seems really high, why did you charge so much? Can you make it faster? Are you busy this weekend? I have a new project with a tight deadline. I want you to take it to the next level. You can get my logo from facebook. Can we have another option doing some work for us "pro bono".</p>
 </body>
 </html>
