--- a/page2.html
+++ b/page2.html
@@ -15,9 +15,9 @@
 <div class="">
   <h2>MAJOR IN ARTS TECHNOLOGY</h2>
 
-    <p>The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree provides undergraduate
-      training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web
-      design.</p>
+<p><span class="spanstyle">The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree provides undergraduate
+  training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web
+  design.</span></p>
 
     <h2>Admission and Retention Requirements:</h2>
 
