Beautified and moved Nav to below header and between body.

--- a/page3.html
+++ b/page3.html
@@ -6,6 +6,13 @@
   <title>Assignment 2</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+<nav>
+  <ul>
+    <li><a href="assignment2.html">Home</li>
+    <li><a href="page2.html">Requirements</li>
+    <li><a href="page3.html">Classes</a></li>
+  </ul>
+</nav>
 
 <body>
   <p><img src="images/nosense.JPG" alt="Being lost in the insecurities brought on through social media" style="width:600px;height:370px;"></p>
@@ -63,11 +70,7 @@
 
   <p>Internship providing the opportunity to apply knowledge of arts technology in arts agencies, business and/or education settings. Prerequisites: ATK 201; 1 course selected from ATK 301; MUS 211; or ART 371 or THE 360. Junior/senior standing in
     area of concentration; 2.50 G.P.A.</p>
-  <ul>
-    <li><a href="assignment2.html">Home</li>
-    <li><a href="page2.html">Requirements</li>
-    <li><a href="page3.html">Classes</a></li>
-  </ul>
+
 </body>
 
 </html>
