--- a/exercise5.html
+++ b/exercise5.html
@@ -8,7 +8,7 @@
 <body>
 <header>
   <h1>The Poison Sky</h1>
-  <p>The default color of this link should be green without an underline and should turn red with an underline when you hover over it:,br> <a href="http://chrisvalleskey.com/fillerama/" target="_blank">http://chrisvalleskey.com/fillerama/</a></p>
+  <p>The default color of this link should be green without an underline and should turn red with an underline when you hover over it:<br> <a href="http://chrisvalleskey.com/fillerama/" target="_blank">http://chrisvalleskey.com/fillerama/</a></p>
   <p>*Insistently* Bow ties are cool! Come on Amy, I'm a normal bloke, tell me what normal blokes do! You've swallowed a planet! No... It's a thing; it's like a plan, but with more greatness.</p>
 </header>
 <h2>The Fires of Pompeii</h2>
