--- a/exercise5.html
+++ b/exercise5.html
@@ -12,7 +12,7 @@
   <p>*Insistently* Bow ties are cool! Come on Amy, I'm a normal bloke, tell me what normal blokes do! You've swallowed a planet! No... It's a thing; it's like a plan, but with more greatness.</p>
 </header>
 <h2>The Fires of Pompeii</h2>
-<p>You know how I sometimes have really brilliant ideas? I'm the Doctor. Well, they call me the Doctor. I don't know why. I call me the Doctor too. I still don't know why. You know how I sometimes have really brilliant ideas? Father Christmas. Santa Claus. Or as I've always known him: Jeff. They're not aliens, they're Earth...liens!</p>
+<p>You know how I sometimes have really brilliant ideas? <span class="spanstyle">I'm the Doctor. Well, they call me the Doctor. I don't know why.</span> I call me the Doctor too. I still don't know why. You know how I sometimes have really brilliant ideas? Father Christmas. Santa Claus. Or as I've always known him: Jeff. They're not aliens, they're Earth...liens!</p>
 <ul>
 <li>No... It's a thing; it's like a plan, but with more greatness.</li>
 <li>Father Christmas. Santa Claus. Or as I've always known him: Jeff.</li>
@@ -20,7 +20,7 @@
 <li>Aw, you're all Mr. Grumpy Face today.</li>
 </ul>
 <h3>The Fires of Pompeii</h3>
-<p>I'm nobody's taxi service; I'm not gonna be there to catch you every time you feel like jumping out of a spaceship. The way I see it, every life is a pile of good things and bad things...hey...the good things don't always soften the bad things; but vice-versa the bad things don't necessarily spoil the good things and make them unimportant. It's art! A statement on modern society, 'Oh Ain't Modern Society Awful?'! Heh-haa! Super squeaky bum time! You hate me; you want to kill me! Well, go on! Kill me! KILL ME!</p>
+<p3>I'm nobody's taxi service; I'm not gonna be there to catch you every time you feel like jumping out of a spaceship. The way I see it, every life is a pile of good things and bad things...hey...the good things don't always soften the bad things; but vice-versa the bad things don't necessarily spoil the good things and make them unimportant. It's art! A statement on modern society, 'Oh Ain't Modern Society Awful?'! Heh-haa! Super squeaky bum time! You hate me; you want to kill me! Well, go on! Kill me! KILL ME!</p3>
 <h4>Father's Day</h4>
 <p>It's art! A statement on modern society, 'Oh Ain't Modern Society Awful?'! I'm nobody's taxi service; I'm not gonna be there to catch you every time you feel like jumping out of a spaceship. No... It's a thing; it's like a plan, but with more greatness. You know when grown-ups tell you 'everything's going to be fine' and you think they're probably lying to make you feel better? I'm nobody's taxi service; I'm not gonna be there to catch you every time you feel like jumping out of a spaceship.</p>
 <ol>
