--- a/exercise5.html
+++ b/exercise5.html
@@ -13,6 +13,7 @@
     <p>The default color of this link should be green without an underline and should turn red with an underline when you hover over it:<br> <a href="http://chrisvalleskey.com/fillerama/" target="_blank">http://chrisvalleskey.com/fillerama/</a></p>
     <p>*Insistently* Bow ties are cool! Come on Amy, I'm a normal bloke, tell me what normal blokes do! You've swallowed a planet! No... It's a thing; it's like a plan, but with more greatness.</p>
   </header>
+  <p><img src="images/doctors.jpg" alt="Many Doctor Who" style="CENTER"></p>
   <h2>The Fires of Pompeii</h2>
   <p>You know how I sometimes have really brilliant ideas? <span class="spanstyle">I'm the Doctor. Well, they call me the Doctor. I don't know why.</span> I call me the Doctor too. I still don't know why. You know how I sometimes have really
     brilliant ideas? Father Christmas. Santa Claus. Or as I've always known him: Jeff. They're not aliens, they're Earth...liens!</p>
@@ -35,7 +36,7 @@
 <li>Stop talking, brain thinking. Hush.</li>
 </ol>
 <h5>The Doctor's Daughter</h5>
-<p>You've swallowed a planet! Annihilate? No. No violence. I won't stand for it. Not now, not ever, do you understand me?!,<span class="spanstyle">I'm the Doctor</span> , the Oncoming Storm - and you basically meant beat them in a football match,
+<p>You've swallowed a planet! Annihilate? No. No violence. I won't stand for it. Not now, not ever, do you understand me?!,<span class=" spanstyle">I'm the Doctor</span> , the Oncoming Storm - and you basically meant beat them in a football match,
     didn't you? You know how I sometimes have really brilliant ideas?</p>
 </body>
 
