seriously think I fixed alot

--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>Assignment 2</title>
@@ -13,17 +14,19 @@
     <li><a href="page3.html">Classes</a></li>
   </ul>
 </nav>
+
 <body>
 
-<header>
-  <h1>Arts Technology Program (ATK)</h1>
-</header>
-<div class="">
-  <h2>MAJOR IN ARTS TECHNOLOGY</h2>
+  <header>
+    <h1>Arts Technology Program (ATK)</h1>
+  </header>
+  <div class="">
+    <h2>MAJOR IN ARTS TECHNOLOGY</h2>
 
-<p><span class="spanstyle">The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree provides undergraduate
-  training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web
-  design.</span></p>
+    <p><span class="spanstyle">The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The
+        degree provides undergraduate
+        training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web
+        design.</span></p>
 
     <h2>Admission and Retention Requirements:</h2>
 
@@ -38,7 +41,8 @@
 
     <h4>Fine Arts Core (11 hours)</h4>
 
-    <p>This group of courses provides the student with a basic experience in reading and performing music, visual arts experience in drawing and design, and interdisciplinary fine arts history study: 3 hours from the following: ART 103, 104 or 109; and
+    <p>This group of courses provides the student with a basic experience in reading and performing music, visual arts experience in drawing and design, and interdisciplinary fine arts history study: 3 hours from the following: ART 103, 104 or 109;
+      and
       2 hours from the following: MUS 118 or 119, 121.10, or 126; and 6 hours (in two different Schools) from the following: ART 155, 156, MUS 152, THE 170 or 171.</p>
 
     <h4>Arts Technology Core (8 hours)</h4>
@@ -56,7 +60,8 @@
 
     <h5>Music</h5>
 
-    <p>6 hours in addition to the Music course completed for the Fine Arts Core from the follwing courses: MUS 118 or 119, 121, 126, or from Applied Music study (MUS 131-138 or 231-238): and 6 hours from the following: MUS 101 and 107, or 102 and 108;
+    <p>6 hours in addition to the Music course completed for the Fine Arts Core from the follwing courses: MUS 118 or 119, 121, 126, or from Applied Music study (MUS 131-138 or 231-238): and 6 hours from the following: MUS 101 and 107, or 102 and
+      108;
       and 6 hours from the following: MUS 167, 175, 205, 207, 265, 360, or up to two credit hours of a music ensemble (MUS 139 or 239). Auditions may be required by the School of Music for some of these courses; or</p>
 
     <h5>Theatre</h5>
@@ -67,7 +72,7 @@
 
     <p>Select from the following courses after completion of the Fine Arts Core, the Arts Technology Core, and the Arts Technology intermediate portfolio review.</p>
 
-</div>
+  </div>
   <ul>
     <li>3 hours from the following: ATK 240, 300, 340, 345, or 380.</li>
     <li>3 hours from the following: ATK 300, ART 371, THE 360 with graphic topics, or ATK 380.</li>
