--- a/assignment4.html
+++ b/assignment4.html
@@ -9,19 +9,22 @@
 <p><img src="images/sawitontv.png" alt="Artistic Representation of Propaganda on TV" style="width:1200px;height:600px;"></p>
 <nav>
   <ul>
-    <li><a href="assignment2.html">Home</li></a>
+    <li><a href="assignment4.html">Home</li></a>
     <li><a href="page2.html">Requirements</li></a>
     <li><a href="page3.html">Classes</a></li></a>
   </ul>
 </nav>
 
 <body>
-  <h1><b>Arts Technology Program (ATK)</h1>
-  <p><b>110 Center for Visual Arts</b><br>
-    <b>Phone:</b> (309) 438-3921<br>
-    <b>Director:</b> Aaron Paolucci<br>
-    <b>Degrees Offered:</b> B.A., B.S.
-  </p>
+  <header>
+
+    <h1><b>Arts Technology Program (ATK)</h1>
+    <p><b>110 Center for Visual Arts</b><br>
+      <b>Phone:</b> (309) 438-3921<br>
+      <b>Director:</b> Aaron Paolucci<br>
+      <b>Degrees Offered:</b> B.A., B.S.
+    </p>
+  </header>
 
   <div class="">
     <h2>MAJOR IN ARTS TECHNOLOGY</h2>
