Yeah boy Finished everything but the pesky white background.

--- a/assignment4.html
+++ b/assignment4.html
@@ -6,7 +6,7 @@
   <title>Assignment 4</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<p><img src="images/sawitontv.png" alt="Artistic Representation of Propaganda on TV" style="width:1200px;height:600px;"></p>
+<p><img class="imgbox" src="images/sawitontv.png" alt="Artistic Representation of Propaganda on TV" style="width:1200px;height:600px;"></p>
 <nav>
   <ul>
     <li><a href="assignment4.html">Home</li></a>
