--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
   <title>Assignment 2</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<p><img src="images/cosmicsurfer.jpeg" alt="Will humans be the kooks of the Universe?" style="width:1200px;height:600px;"></p>
+<p><img class="imgbox" src="images/cosmicsurfer.jpeg" alt="Will humans be the kooks of the Universe?" style="width:1200px;height:600px;"></p>
 <nav>
   <ul>
     <li><a href="assignment4.html">Home</li>
