--- a/page3.html
+++ b/page3.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Assignment 2</title>
+  <title>Assignment 4</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<p><img src="images/nosense.JPG" alt="Being lost in the insecurities brought on through social media" style="width:1200px;height:600px;"></p>
+<p><img class="imgbox" src="images/nosense.JPG" alt="Being lost in the insecurities brought on through social media" style="width:1200px;height:600px;"></p>
 <nav>
   <ul>
     <li><a href="assignment4.html">Home</li>
@@ -16,9 +16,9 @@
 </nav>
 
 <body>
-
+<header>
   <h1>Arts Technology Program (ATK)</h1>
-
+</header>
   <h2>Arts Technology Courses (ATK)</h2>
 
   <h3>BASIC SKILLS IN THE DIGITAL ARTS</h3>
