--- a/assignment5.html
+++ b/assignment5.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <link href="assignment5.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-  A BOOTS RILEY FILM
-  <h1>SORRY TO BOTHER YOU</h1>
-  <p>STARRING LAKEITH STANFIELD TESSA THOMPSON</p>
-  <p>JERMAINE FOWLER OMARI HARWICK TERRY CREWS</p>
-  <p>PATTON OSWALT DAVID CROSS WITH DANNY GLOVER</p>
-  <p>WITH STEVEN YEUN AND ARMIE HAMMER<p>
-      SORRYTOBOTHERYOU.MOVIE
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link href="assignment5.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <span class="purplespan2">A</span><span class="purplespan1">BOOTS RILEY</span><span class="purplespan2">FILM</span>
+    <h1>SORRY TO <br>
+      BOTHER YOU<br></h1>
+    <p><span class="purplespan1">STARRING</span><span class="redspan2">LAKEITH STANFIELD</span><span class="pinkspan2">TESSA THOMPSON</span><br>
+    <span class="redspan2">JERMAINE FOWLER</span><span class="pinkspan2">OMARI HARWICK</span><span class="redspan2">TERRY CREWS</span><br>
+    <span class="pinkspan2">PATTON OSWALT</span><span class="redspan2">DAVID CROSS</span><span class="purplespan1">WITH</span><span class="pinkspan2">DANNY GLOVER</span><br>
+    <span class="purplespan1">WITH<span> <span class="redspan2">STEVEN YEUN</span> <span class="purplespan1">AND</span> <span class="pinkspan2">ARMIE HAMMER</span><p>
+    SORRYTOBOTHERYOU.MOVIE
+  </body>
 </html>
