fonts and picture

--- a/assignment5.html
+++ b/assignment5.html
@@ -8,7 +8,8 @@
   <body>
     <span class="purplespan2">A</span><span class="purplespan1">BOOTS RILEY</span><span class="purplespan2">FILM</span>
     <h1> <span class="redspan1">SORRY</span> <span class="pinkspan1">TO</span><br>
-      <span class="pinkspan1">BOTHER</span> <span class="redspan1">YOU</span><br></h1>
+    <span class="pinkspan1">BOTHER</span> <span class="redspan1">YOU</span><br></h1>
+    <img class="blockimg" src="images/Lakeith.jpg"/>
     <p><span class="purplespan1">STARRING</span> <span class="redspan2">LAKEITH STANFIELD</span> <span class="pinkspan2">TESSA THOMPSON</span><br>
     <span class="redspan2">JERMAINE FOWLER</span> <span class="pinkspan2">OMARI HARWICK</span> <span class="redspan2">TERRY CREWS</span><br>
     <span class="pinkspan2">PATTON OSWALT</span> <span class="redspan2">DAVID CROSS</span> <span class="purplespan1">WITH</span> <span class="pinkspan2">DANNY GLOVER</span><br>
