--- a/assignment5.html
+++ b/assignment5.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <link href="assignment5.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-  <span class="purplespan2">A</span><span class="purplespan1">BOOTS RILEY</span><span class="purplespan2">FILM</span>
-  <h1> <span class="redspan1">SORRY</span> <span class="pinkspan1">TO</span><br>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link href="assignment5.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <span class="purplespan3">A</span> <span class="purplespan1">BOOTS RILEY</span> <span class="purplespan3">FILM</span>
+    <h1> <span class="redspan1">SORRY</span> <span class="pinkspan1">TO</span><br>
     <span class="pinkspan1">BOTHER</span> <span class="redspan1">YOU</span><br></h1>
-  <img class="blockimg" src="images/Lakeith.jpg" />
-  <p><span class="purplespan1">STARRING</span> <span class="redspan2">LAKEITH STANFIELD</span> <span class="pinkspan2">TESSA THOMPSON</span><br>
+    <img class="blockimg" src="images/Lakeith.jpg"/>
+    <p><span class="purplespan1">STARRING</span> <span class="redspan2">LAKEITH STANFIELD</span> <span class="pinkspan2">TESSA THOMPSON</span><br>
     <span class="redspan2">JERMAINE FOWLER</span> <span class="pinkspan2">OMARI HARWICK</span> <span class="redspan2">TERRY CREWS</span><br>
     <span class="pinkspan2">PATTON OSWALT</span> <span class="redspan2">DAVID CROSS</span> <span class="purplespan1">WITH</span> <span class="pinkspan2">DANNY GLOVER</span><br>
-    <span class="purplespan1">WITH<span> <span class="redspan2">STEVEN YEUN</span> <span class="purplespan1">AND</span> <span class="pinkspan2">ARMIE HAMMER</span>
-        <p>
-          SORRYTOBOTHERYOU.MOVIE
-</body>
-
+    <span class="purplespan1">WITH<span> <span class="redspan2">STEVEN YEUN</span> <span class="purplespan1">AND</span> <span class="pinkspan2">ARMIE HAMMER</span><p>
+    SORRYTOBOTHERYOU.MOVIE
+  </body>
 </html>
