--- a/assignment6.html
+++ b/assignment6.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <div class="wrapper">
   <h1>This header is Helvetica and is not bold</h1>
 
   <!-- These links should be Helvetica and be red boxes that change to a darker red when hovered over. -->
@@ -29,7 +30,9 @@
   <p>Duis tattooed tofu, anim occaecat delectus banh mi freegan tempor nihil velit keytar tumblr DIY. Excepteur nesciunt <a href="http://en.wikipedia.org/wiki/Helvetica" target="_blank">helvetica</a>, trust fund master cleanse assumenda keffiyeh raw denim consectetur vegan stumptown salvia. You probably haven't heard of them lo-fi aesthetic nostrud, high life <a href="http://www.mcsweeneys.net/" target="_blank">mcsweeney's</a> consectetur cred quinoa id sed tumblr photo booth. American apparel nulla yr banh mi culpa consectetur. Et thundercats seitan next level. Twee ethical nesciunt four loko whatever put a bird on it. Master cleanse pariatur dolor, put a bird on it twee locavore assumenda PBR.</p>
 
   <p>Irure irony banh mi, gentrify letterpress aliqua chambray marfa portland ea messenger bag. Marfa vero portland, quis messenger bag artisan placeat aute proident +1 qui twee iphone. American apparel elit eiusmod, quinoa accusamus pariatur marfa. Esse shoreditch commodo, tofu mollit anim scenester <a href="http://www.ifc.com/portlandia/" target="_blank">portland</a> organic. Cardigan 3 wolf moon in next level, nisi id farm-to-table you probably haven't heard of them aliqua art party brooklyn mcsweeney's stumptown williamsburg marfa. <a href="http://en.wikipedia.org/wiki/Do_it_yourself" target="_blank">DIY</a> fanny pack mlkshk, sapiente single-origin coffee dolore yr commodo vinyl. Adipisicing carles bicycle rights, assumenda organic portland blog commodo skateboard williamsburg.</p>
-
-  <p>This footer is Verdana in italics. Don't use the &lt;i&gt; or &lt;em&gt; tags to make this text italicized - use styles instead. The text is centered.</p>
+  <footer>
+    <p>This footer is Verdana in italics. Don't use the &lt;i&gt; or &lt;em&gt; tags to make this text italicized - use styles instead. The text is centered.</p>
+  </footer>
+</div>
 </body>
 </html>
