--- a/assignment6.html
+++ b/assignment6.html
@@ -8,18 +8,23 @@
 
 <body>
   <div class="wrapper">
-  <h1>This header is Helvetica and is not bold</h1>
+    <header>
+      <h1>This header is Helvetica and is not bold</h1>
+    </header>
+
 
   <!-- These links should be Helvetica and be red boxes that change to a darker red when hovered over. -->
-  <ul>
-    <li><a href="https://artstech.me/ATK301/atom301.html" target="_blank">Setting Up Atom</a></li>
-    <li><a href="https://artstech.me/ATK301/BasicHTML.html" target="_blank">Page Structure</a></li>
-    <li><a href="https://artstech.me/ATK301/BasicHTMLContinued.html" target="_blank">Basic HTML</a></li>
-    <li><a href="https://artstech.me/ATK301/BasicCSS.html" target="_blank">Basic CSS</a></li>
-    <li><a href="https://artstech.me/ATK301/BasicCSSContinued.html" target="_blank">Basic CSS 2</a></li>
-    <li><a href="https://artstech.me/ATK301/AdvancedCSS.html" target="_blank">Advanced CSS</a></li>
-  </ul>
-
+  <nav>
+    <ul>
+      <li><a href="https://artstech.me/ATK301/atom301.html" target="_blank">Setting Up Atom</a></li>
+      <li><a href="https://artstech.me/ATK301/BasicHTML.html" target="_blank">Page Structure</a></li>
+      <li><a href="https://artstech.me/ATK301/BasicHTMLContinued.html" target="_blank">Basic HTML</a></li>
+      <li><a href="https://artstech.me/ATK301/BasicCSS.html" target="_blank">Basic CSS</a></li>
+      <li><a href="https://artstech.me/ATK301/BasicCSSContinued.html" target="_blank">Basic CSS 2</a></li>
+      <li><a href="https://artstech.me/ATK301/AdvancedCSS.html" target="_blank">Advanced CSS</a></li>
+    </ul>
+  </nav>
+  
   <h2>This is a secondary header in Helvetica</h2>
   <p>These paragraphs are in the Georgia font and are justified. Don't use the &lt;strong&gt; or &lt;b&gt; tags to make these top three paragraphs bold - use styles.</p>
 
