--- a/exercise7.html
+++ b/exercise7.html
@@ -22,7 +22,9 @@
     </aside>
     <main>
       <h2>The Farnsworth Parabox</h2>
-      <img src="images/rickbob.jpg" alt="Rick Bob" class="imagefloat" />
+			<aside class="images">
+				<img src="images/rickbob.jpg" alt="Rick Bob" class="imagefloat" />
+			</aside>
       <p>Spare me your space age technobabble, Attila the Hun! Yes, except the Dave Matthews Band doesn't rock. Bender, quit destroying the universe!</p>
       <p>Ven ve voke up, ve had zese wodies. I don't know what you did, Fry, but once again, you screwed up! Now all the planets are gonna start cracking wise about our mamas. Yep, I remember. They came in last at the Olympics, then retired to promote alcoholic beverages! Do a flip!</p>
       <p>Oh, all right, I am. But if anything happens to me, tell them I died robbing some old man. Does anybody else feel jealous and aroused and worried? When will that be? Kids don't turn rotten just from watching TV. That's a popular name today. Little "e", big "B"?</p>
