--- a/assignment6.html
+++ b/assignment6.html
@@ -23,10 +23,12 @@
         <li><a href="https://artstech.me/ATK301/AdvancedCSS.html" target="_blank">Advanced CSS</a></li>
       </ul>
     </nav>
-    <aside>
-      <h2>This is a secondary header in Helvetica</h2>
-    </aside>
     <main>
+      <aside class="">
+      <h2>This is a secondary header in Helvetica</h2>  
+      </aside>
+
+      <img src="images/a61.jpg" alt="Bricks" class="imagefloat" />
       <p>These paragraphs are in the Georgia font and are justified. Don't use the &lt;strong&gt; or &lt;b&gt; tags to make these top three paragraphs bold - use styles.</p>
 
       <p>Notice that the page is centered and it has a border around it. The photo also has a border around it. Replicate all of the padding and margins around the elements of the page.</p>
