--- a/assignment6.html
+++ b/assignment6.html
@@ -24,12 +24,11 @@
       </ul>
     </nav>
     <main>
-      <aside class="">
-      <h2>This is a secondary header in Helvetica</h2>  
+      <aside class="h2">
+      <h2>This is a secondary header in Helvetica</h2>
       </aside>
-
       <img src="images/a61.jpg" alt="Bricks" class="imagefloat" />
-      <p>These paragraphs are in the Georgia font and are justified. Don't use the &lt;strong&gt; or &lt;b&gt; tags to make these top three paragraphs bold - use styles.</p>
+      <p class="p1">These paragraphs are in the Georgia font and are justified. Don't use the &lt;strong&gt; or &lt;b&gt; tags to make these top three paragraphs bold - use styles.</p>
 
       <p>Notice that the page is centered and it has a border around it. The photo also has a border around it. Replicate all of the padding and margins around the elements of the page.</p>
 
