--- a/assignment6.html
+++ b/assignment6.html
@@ -25,7 +25,7 @@
     </nav>
     <main>
       <aside class="h2">
-      <h2>This is a secondary header in Helvetica</h2>
+        <h2>This is a secondary header in Helvetica</h2>
       </aside>
       <img src="images/a61.jpg" alt="Bricks" class="imagefloat" />
       <p class="p1">These paragraphs are in the Georgia font and are justified. Don't use the &lt;strong&gt; or &lt;b&gt; tags to make these top three paragraphs bold - use styles.</p>
@@ -34,8 +34,10 @@
 
       <p class="p3">The links in the following paragraphs should be red, bold, and without an underline in their "normal" (visted or unvisited) state. The links should turn blue with an underline when they are hovered over.</p>
 
-      <p>Duis tattooed tofu, anim occaecat delectus banh mi freegan tempor nihil velit keytar tumblr DIY. Excepteur nesciunt <a class="a2" href="http://en.wikipedia.org/wiki/Helvetica" target="_blank">helvetica</a>, trust fund master cleanse assumenda keffiyeh
-        raw denim consectetur vegan stumptown salvia. You probably haven't heard of them lo-fi aesthetic nostrud, high life <a class="a3" href="http://www.mcsweeneys.net/" target="_blank">mcsweeney's</a> consectetur cred quinoa id sed tumblr photo booth.
+      <p>Duis tattooed tofu, anim occaecat delectus banh mi freegan tempor nihil velit keytar tumblr DIY. Excepteur nesciunt <a class="a2" href="http://en.wikipedia.org/wiki/Helvetica" target="_blank">helvetica</a>, trust fund master cleanse
+        assumenda keffiyeh
+        raw denim consectetur vegan stumptown salvia. You probably haven't heard of them lo-fi aesthetic nostrud, high life <a class="a3" href="http://www.mcsweeneys.net/" target="_blank">mcsweeney's</a> consectetur cred quinoa id sed tumblr photo
+        booth.
         American apparel nulla yr banh mi culpa consectetur. Et thundercats seitan next level. Twee ethical nesciunt four loko whatever put a bird on it. Master cleanse pariatur dolor, put a bird on it twee locavore assumenda PBR.</p>
 
       <p>Irure irony banh mi, gentrify letterpress aliqua chambray marfa portland ea messenger bag. Marfa vero portland, quis messenger bag artisan placeat aute proident +1 qui twee iphone. American apparel elit eiusmod, quinoa accusamus pariatur
