--- a/exercise7.html
+++ b/exercise7.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
+
 <head>
-	<meta charset="UTF-8">
-	<title>The Joy of CSS</title>
-	<link href="exercise7.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8">
+  <title>The Joy of CSS</title>
+  <link href="exercise7.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
   <div class="wrapper">
     <header>
@@ -22,17 +24,21 @@
     </aside>
     <main>
       <h2>The Farnsworth Parabox</h2>
-			<aside class="images">
-				<img src="images/rickbob.jpg" alt="Rick Bob" class="imagefloat" />
-			</aside>
+      <aside class="images">
+        <img src="images/rickbob.jpg" alt="Rick Bob" class="imagefloat" />
+      </aside>
       <p>Spare me your space age technobabble, Attila the Hun! Yes, except the Dave Matthews Band doesn't rock. Bender, quit destroying the universe!</p>
-      <p>Ven ve voke up, ve had zese wodies. I don't know what you did, Fry, but once again, you screwed up! Now all the planets are gonna start cracking wise about our mamas. Yep, I remember. They came in last at the Olympics, then retired to promote alcoholic beverages! Do a flip!</p>
-      <p>Oh, all right, I am. But if anything happens to me, tell them I died robbing some old man. Does anybody else feel jealous and aroused and worried? When will that be? Kids don't turn rotten just from watching TV. That's a popular name today. Little "e", big "B"?</p>
-      <p>You'll have all the Slurm you can drink when you're partying with Slurms McKenzie! Ah, the 'Breakfast Club' soundtrack!  I can't wait til I'm old enough to feel ways about stuff! Check it out, y'all. Everyone who was invited is here. You wouldn't. Ask anyway!</p>
+      <p>Ven ve voke up, ve had zese wodies. I don't know what you did, Fry, but once again, you screwed up! Now all the planets are gonna start cracking wise about our mamas. Yep, I remember. They came in last at the Olympics, then retired to
+        promote alcoholic beverages! Do a flip!</p>
+      <p>Oh, all right, I am. But if anything happens to me, tell them I died robbing some old man. Does anybody else feel jealous and aroused and worried? When will that be? Kids don't turn rotten just from watching TV. That's a popular name today.
+        Little "e", big "B"?</p>
+      <p>You'll have all the Slurm you can drink when you're partying with Slurms McKenzie! Ah, the 'Breakfast Club' soundtrack! I can't wait til I'm old enough to feel ways about stuff! Check it out, y'all. Everyone who was invited is here. You
+        wouldn't. Ask anyway!</p>
     </main>
     <footer>
       <p>Copyright Illinois State University</p>
     </footer>
   </div>
 </body>
+
 </html>
