--- a/homepage.html
+++ b/homepage.html
@@ -4,21 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <title>The Joy of CSS</title>
-  <link href="exercise7.css" rel="stylesheet" type="text/css">
+  <link href="homepage.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
   <div class="wrapper">
     <header>
-      <h1>The Joy of CSS</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="page2.html">Week 3</a></li>
+          <li><a href="page3.html">Week 2</a></li>
+        </ul>
+      </nav>
     </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="page2.html">Week 3</a></li>
-        <li><a href="page3.html">Week 2</a></li>
-      </ul>
-    </nav>
+
     <aside>
       <p>Follow along with Rick as he shows you tips and tricks for floating images, creating horizontal navigation and making grids with CSS</p>
     </aside>
