formatted wrappers, added profile pic

--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="wrapper1">
     <header>
       <nav>
         <ul>
@@ -17,16 +17,18 @@
           <li><a href="page3.html">Week 2</a></li>
         </ul>
       </nav>
+    </div>
     </header>
-
+    <div class="wrapper2">
     <aside>
-      <p>Follow along with Rick as he shows you tips and tricks for floating images, creating horizontal navigation and making grids with CSS</p>
-    </aside>
-    <main>
-      <h2>The Farnsworth Parabox</h2>
+      <p>ABOUT ME:</p>
       <aside class="images">
         <img src="images/rickbob.jpg" alt="Rick Bob" class="imagefloat" />
       </aside>
+    </aside>
+    <main>
+      <h2>Hello, Im Levi!</h2>
+
       <p>Spare me your space age technobabble, Attila the Hun! Yes, except the Dave Matthews Band doesn't rock. Bender, quit destroying the universe!</p>
       <p>Ven ve voke up, ve had zese wodies. I don't know what you did, Fry, but once again, you screwed up! Now all the planets are gonna start cracking wise about our mamas. Yep, I remember. They came in last at the Olympics, then retired to
         promote alcoholic beverages! Do a flip!</p>
