--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,7 @@
     <aside>
       <p>ABOUT ME:</p>
       <aside class="images">
-        <img src="images/rickbob.jpg" alt="Rick Bob" class="imagefloat" />
+        <img src="images/me.png" alt="Levi's Portrait" class="imagefloat" />
       </aside>
     </aside>
     <main>
