--- a/homepage.html
+++ b/homepage.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>The Joy of CSS</title>
+  <link href ="assets/hack.css" rel="stylesheet" type="text/css">
   <link href="homepage.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -20,25 +21,18 @@
     </div>
     </header>
     <div class="wrapper2">
-    <aside>
-      <p>ABOUT ME:</p>
-      <aside class="images">
+    <aside class="images">
         <img src="images/meborder.png" alt="Levi's Portrait" class="imagefloat" />
       </aside>
     </aside>
     <main>
       <h2>Hello, Im Levi!</h2>
 
-      <p>Spare me your space age technobabble, Attila the Hun! Yes, except the Dave Matthews Band doesn't rock. Bender, quit destroying the universe!</p>
-      <p>Ven ve voke up, ve had zese wodies. I don't know what you did, Fry, but once again, you screwed up! Now all the planets are gonna start cracking wise about our mamas. Yep, I remember. They came in last at the Olympics, then retired to
-        promote alcoholic beverages! Do a flip!</p>
-      <p>Oh, all right, I am. But if anything happens to me, tell them I died robbing some old man. Does anybody else feel jealous and aroused and worried? When will that be? Kids don't turn rotten just from watching TV. That's a popular name today.
-        Little "e", big "B"?</p>
-      <p>You'll have all the Slurm you can drink when you're partying with Slurms McKenzie! Ah, the 'Breakfast Club' soundtrack! I can't wait til I'm old enough to feel ways about stuff! Check it out, y'all. Everyone who was invited is here. You
-        wouldn't. Ask anyway!</p>
+      <p>I am currently a full time student pursuing a degree in Creative Technologies with an emphasis in Game Design. I currently enjoy doing level design. </p>
+      <p>I am a non traditional student and have had the experience of a career in IT before attending college. Throughout my career I have worked in many diverse organizations such as government/military, startup, corporate and currently in education. I am very passionate about all things computing, and especially enjoy using open source systems. Aside from my enthusiastic technological pursuits I love art, cooking, gaming, music, and philosophy. </p>
     </main>
     <footer>
-      <p>Copyright Illinois State University</p>
+      <p>Add a button</p>
     </footer>
   </div>
 </body>
