--- a/homepage.html
+++ b/homepage.html
@@ -14,8 +14,9 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="page2.html">Week 3</a></li>
-          <li><a href="page3.html">Week 2</a></li>
+          <li><a href="page2.html">Art</a></li>
+          <li><a href="page2.html">Projects</a></li>
+          <li><a href="page3.html">Resume</a></li>
         </ul>
       </nav>
     </div>
